[package]
name = "learn-renet"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["serialize"] }
bevy_rapier2d = "0.22.0"
bevy_renet = "0.0.9"
bincode = "1.3.3"
egui = "0.23.0"
local-ip-address = "0.5.6"
nalgebra = "0.32.3"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_cbor = "0.11.2"


# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
